Add docker files

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,13 @@ PyJWT>=2.8.0
 cryptography>=41.0.0
 requests>=2.31.0
 
+# Production dependencies
+gunicorn>=21.0.0
+whitenoise>=6.6.0
+psycopg2-binary>=2.9.0
+
 # Optional: Redis for production caching
-# redis>=5.0.0
+redis>=5.0.0
 
 # Optional: For advanced JWT handling
 # python-jose[cryptography]>=3.3.0
