--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django = ">=5.2.0"
 pyjwt = ">=2.8.0"
 cryptography = ">=41.0.0"
 requests = ">=2.31.0"
-django = "*"
+gunicorn = ">=21.0.0"
+whitenoise = ">=6.6.0"
+psycopg2-binary = ">=2.9.0"
+redis = ">=5.0.0"
 
 [dev-packages]
 
